# Neki

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  DemoScene.nkscene  README.md  TestScene3.nkscene
Samples/D3D12/Camera/: Camera.cpp
Samples/D3D12/Cube/: Cube.cpp
Samples/D3D12/Model/: Model.cpp
Samples/D3D12/Texture/: Texture.cpp
Samples/D3D12/Triangle/: Triangle.cpp
Samples/Engine/ECS/: ECS.cpp
Samples/Engine/Events/: Events.cpp
Samples/Engine/Networking/: CPlayer.h  Networking.cpp  Networking_Client.cpp  Networking_Server.cpp  PlayerLayer.cpp  PlayerLayer.h
Samples/Engine/Physics/: Physics.cpp
Samples/Engine/Rendering/: Rendering.cpp
Samples/Resource Files/Kaju/: Kaju.gltf
Samples/Resource-Files/Prefabs/: Cube.gltf
Samples/Scenes/: TestScene.nkscene  TestScene2.nkscene
Samples/Shaders/Cube/: Cube_fs.hlsl  Cube_vs.hlsl
Samples/Shaders/Model/: ModelBlinnPhong_fs.hlsl  ModelPBR_fs.hlsl  Model_vs.hlsl  Skybox_fs.hlsl  Skybox_vs.hlsl
Samples/Shaders/Texture/: Texture_fs.hlsl  Texture_vs.hlsl
Samples/Shaders/Triangle/: Triangle_fs.hlsl  Triangle_vs.hlsl
Samples/Vulkan/Camera/: Camera.cpp
Samples/Vulkan/Cube/: Cube.cpp
Samples/Vulkan/Model/: Model.cpp
Samples/Vulkan/Texture/: Texture.cpp
Samples/Vulkan/Triangle/: Triangle.cpp
Shaders/: ModelBlinnPhong_fs.hlsl  ModelPBR_fs.hlsl  ModelVisibility_fs.hlsl  ModelVisibility_vs.hlsl  Model_vs.hlsl  Postprocess_fs.hlsl  PrefixSum_cs.hlsl  ScreenQuad_vs.hlsl  Shadow_fs.hlsl  Shadow_vs.hlsl  Skybox_fs.hlsl  Skybox_vs.hlsl
Submission/: CMakeLists.txt
Submission/Scenes/: DemoScene.nkscene
Submission/src/: main.cpp
src/Components/: BaseComponent.h  CBoxCollider.cpp  CBoxCollider.h  CCamera.h  CImGuiInspectorRenderable.h  CInput.h  CLight.h  CModelRenderer.h  CNetworkEvent.h  CNetworkSync.h  CPhysicsBody.h  CSelected.h  CSkybox.h  CTransform.cpp  CTransform.h  CWindow.h
src/Core/: Application.h  Context.cpp  Context.h  ContextConfig.h  Engine.cpp  Engine.h  EngineConfig.h  EngineEntryPoint.cpp  RAIIContext.h  Scene.h  SceneObject.h
src/Core-ECS/: Archetype.h  ComponentPool.h  ComponentView.h  Entity.h  IComponentPool.h  Registry.h  Registry.inl
src/Core/Debug/: ConsoleLogger.cpp  ConsoleLogger.h  ILogger.cpp  ILogger.h  LoggerConfig.cpp  LoggerConfig.h
src/Core/Layers/: ClientNetworkLayer.cpp  ClientNetworkLayer.h  DiskModelLoaderLayer.cpp  DiskModelLoaderLayer.h  ILayer.h  InputLayer.cpp  InputLayer.h  ModelVisibilityLayer.cpp  ModelVisibilityLayer.h  PhysicsLayer.cpp  PhysicsLayer.h  PlayerCameraLayer.cpp  PlayerCameraLayer.h  RenderLayer.cpp  RenderLayer.h  ServerNetworkLayer.cpp  ServerNetworkLayer.h  WindowLayer.cpp  WindowLayer.h
src/Core/Memory/: Allocation.h  FreeListAllocator.cpp  FreeListAllocator.h  IAllocator.h  TrackingAllocator.cpp  TrackingAllocator.h
src/Core/Subsystems/: NetworkSystem.cpp  NetworkSystem.h  RenderSystem.cpp  RenderSystem.h
src/Core/Utils/: EnumUtils.cpp  EnumUtils.h  FileUtils.cpp  FileUtils.h  FormatUtils.cpp  FormatUtils.h  ImageLoader.cpp  ImageLoader.h  InputUtils.cpp  InputUtils.h  ModelLoader.cpp  ModelLoader.h  RHIUtils.cpp  RHIUtils.h  Serialisation.h  TextureCompressor.cpp  TextureCompressor.h  Timer.cpp  Timer.h  enum_enable_bitmask_operators.h
src/Graphics/: GPUUploader.cpp  GPUUploader.h  RenderGraph.cpp  RenderGraph.h  Window.cpp  Window.h
src/Graphics/Camera/: Camera.cpp  Camera.h  PlayerCamera.cpp  PlayerCamera.h  ViewFrustum.h
src/Graphics/Lights/: DirectionalLight.h  Light.h  PointLight.h  SpotLight.h
src/Graphics/RenderGraph/: Node.h  RenderGraph.cpp  RenderGraph.h
src/Managers/: EventManager.cpp  EventManager.h  InputManager.cpp  InputManager.h  StreamingManager.cpp  StreamingManager.h  TimeManager.cpp  TimeManager.h
src/Managers/Input/: Axis1DBinding.h  Axis1DInput.cpp  Axis1DInput.h  Axis2DBinding.h  Axis2DInput.cpp  Axis2DInput.h  BaseInput.h  ButtonBinding.h  ButtonInput.cpp  ButtonInput.h
src/Networking/: TCPEventHandler.h
src/Physics/: BroadPhaseLayerInterfaceImpl.h  ContactListenerImpl.h  ObjectLayerPairFilterImpl.h  ObjectVsBroadPhaseLayerFilterImpl.h  PhysicsBroadPhaseLayer.h  PhysicsObjectLayer.h
src/RHI/: IBuffer.h  IBufferView.h  ICommandBuffer.h  ICommandPool.h  IDescriptorSet.h  IDevice.h  IFence.h  IPipeline.h  IQueue.h  IRootSignature.h  ISampler.h  ISemaphore.h  IShader.h  ISurface.h  ISwapchain.h  ITexture.h  ITextureView.h  RHIUtils.cpp  RHIUtils.h  ResourceStates.h
src/RHI-D3D12/: D3D12Buffer.cpp  D3D12Buffer.h  D3D12BufferView.cpp  D3D12BufferView.h  D3D12CommandBuffer.cpp  D3D12CommandBuffer.h  D3D12CommandPool.cpp  D3D12CommandPool.h  D3D12DescriptorSet.cpp  D3D12DescriptorSet.h  D3D12Device.cpp  D3D12Device.h  D3D12Fence.cpp  D3D12Fence.h  D3D12Pipeline.cpp  D3D12Pipeline.h  D3D12Queue.cpp  D3D12Queue.h  D3D12RootSignature.cpp  D3D12RootSignature.h  D3D12Sampler.cpp  D3D12Sampler.h  D3D12Semaphore.cpp  D3D12Semaphore.h  D3D12Shader.cpp  D3D12Shader.h  D3D12Surface.cpp  D3D12Surface.h  D3D12Swapchain.cpp  D3D12Swapchain.h  D3D12Texture.cpp  D3D12Texture.h  D3D12TextureView.cpp  D3D12TextureView.h
src/RHI-Vulkan/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanBufferView.cpp  VulkanBufferView.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanCommandPool.cpp  VulkanCommandPool.h  VulkanDebugAllocator.cpp  VulkanDebugAllocator.h  VulkanDescriptorSet.cpp  VulkanDescriptorSet.h  VulkanDevice.cpp  VulkanDevice.h  VulkanFence.cpp  VulkanFence.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanQueue.cpp  VulkanQueue.h  VulkanRootSignature.cpp  VulkanRootSignature.h  VulkanSampler.cpp  VulkanSampler.h  VulkanSemaphore.cpp  VulkanSemaphore.h  VulkanShader.cpp  VulkanShader.h  VulkanSurface.cpp  VulkanSurface.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanTexture.cpp  VulkanTexture.h  VulkanTextureView.cpp  VulkanTextureView.h  VulkanUtils.cpp  VulkanUtils.h
src/Types/: DataFormat.h  Materials.h  NekiTypes.h  ResourceStates.h  SemanticNames.h  ShaderAttribute.h  ShaderAttribute.hlsl  ShaderAttribute.hlsli  ShaderAttributeLocations.h  ShaderMacros.hlsli
(+66 files in other folders)
